infra/k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pokemon-search-service
spec:
  type: NodePort
  selector:
    app: pokemon-search
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
